--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "name": "calcxtea",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
@@ -16,5 +16,13 @@
     "tea"
   ],
   "author": "imam",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Imams27/calcxtea"
+  },
+  "bugs": {
+    "url": "https://github.com/Imams27/calcxtea/issues"
+  },
+  "homepage": "https://github.com/Imams27/calcxtea#readme"
 }
